feat: display live metrics
